# MAC-Yee

./: .gitignore  1v_lu_test  2v_lu_test  CMakeCache.txt  CMakeLists.txt  CMakeLists_old.txt  Makefile  Pressure_test  README.md  Reynolds_test  Reynolds_test2  cmake_install.cmake  convergence_test  convergence_test_ads  convergence_test_direct  easy_test  env_set  lu_convergence_test  lu_test  no_lu_test  preserving_test  preserving_test_ads  preserving_test_direct  quick_build  quick_test  stokes_convergence_test  v_lu_test
.cache/clangd/index/: 1form_assemble_matrix.cpp.03C4B7CCE85678CA.idx  2form_assemble_matrix.cpp.317A9697049EF368.idx  DUAL_MAC.cpp.D67A1886306A9E74.idx  DUAL_MAC.h.B5F6EAEDB9A5351C.idx  linearsolver.cpp.541918EE1EC017B1.idx  main.cpp.8AA27BE5DC53BBC8.idx  output.cpp.4172FD610EEFC953.idx  ref_sol.h.4ABD3C94DBB1B286.idx  setup.cpp.7D48F51B2AF0D7F0.idx
include/: DUAL_MAC.h  evaluation.h  ref_sol.h
petsc_example/: ex2 (1).cpp  ex3.c
petsc_example/Hall_MHD_dual/: ErrorEstimator.cpp  ErrorEstimator.hpp  Hall_MHD_dual.cpp  Hall_MHD_dual.hpp  Integrators.cpp  Integrators.hpp  MHD_solver.cpp  MHD_solver.hpp  lsf_Hall.sh  lsf_weakcurl.sh  makefile  petsc.opts  plot_Hopf.py  plot_MHDvortex_conservation.py  plot_MHDvortex_error.py  plot_OrszagTang.py  plot_conservation.py  plot_error.py  plot_friction.py  plot_island.py  preconditioners.cpp  preconditioners.hpp  refiner.cpp  refiner.hpp  test-weakcurl.cpp  test-weakcurl.sh  test.sh  test_MHDvortex.sh  test_MHDvortex_conservation.sh  test_OrszagTang.sh  test_OrszagTang_3d.sh  test_OrszagTang_Kraus.sh  test_OrszagTang_Re100000.sh  test_OrszagTang_ideal.sh  test_TGvortex.sh  test_TGvortex_conservation.sh  test_Whistler.sh  test_Whistler_small.sh  test_adaptive.sh  test_conservation.sh  (+43 more)
petsc_example/Hall_MHD_dual/mesh/: box-3x3x3-cube.mesh  cube-tetra.mesh
src/: 1form_assemble_matrix.cpp  2form_assemble_matrix.cpp  back_1form_assemble_matrix  back_2form_assemble_matrix  evaluation.cpp  lifecycle.cpp  linearsolver.cpp  output.cpp  setup.cpp  time_evolve.cpp
test/: Pressure_test.cpp  Pressure_test2.cpp  Reynold_test.cpp  Reynold_test2.cpp  Rynold_test2.cpp  convergence_test.cpp  convergence_test_CFL.cpp  convergence_test_periodic_p.cpp  main.cpp  preserving.cpp  stokes_convergence_test.cpp
